<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolBarTheme"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/white"
        app:srcCompat="@drawable/plus"
        app:pressedTranslationZ="0dp"/>
<!--press on-->
    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="75dp"
        android:layout_marginRight="@dimen/fab_margin">

        <TextView
            android:id="@+id/voiceFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/fab_voice"
            android:layout_gravity="center"
            android:text="음성 등록"
            android:fontFamily="@font/nanums"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_voice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimaryDark"
            app:pressedTranslationZ="8dp"
            app:srcCompat="@drawable/voice" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="145dp"
        android:layout_marginRight="@dimen/fab_margin">

        <TextView
            android:id="@+id/calFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/fab_cal"
            android:layout_gravity="center"
            android:text="직접 등록"
            android:fontFamily="@font/nanums"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_cal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimaryDark"
            app:pressedTranslationZ="8dp"
            app:srcCompat="@drawable/calendar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="215dp"
        android:layout_marginRight="@dimen/fab_margin">

        <TextView
            android:id="@+id/nonFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/fab_non"
            android:layout_gravity="center"
            android:text="신선 식품"
            android:fontFamily="@font/nanums"
            android:visibility="gone" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_non"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimaryDark"
            app:pressedTranslationZ="8dp"
            app:srcCompat="@drawable/edit" />
    </RelativeLayout>

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>