...
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    android:layout_marginTop="23dp">

        <com.namjongbin.fridge_angel.CustomViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
...
            android:fontFamily="@font/nanums"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"/>
    <Button
        android:id="@+id/guideBtn2"
        android:fontFamily="@font/nanums"
        android:text="다음"
        style="?android:attr/borderlessButtonStyle"
        android:background="#00FFFFFF"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
...
