<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="240dip"
    android:layout_height="210dip"
    android:background="@color/white"
    android:layout_margin="16dp"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/addItemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="음식"
        android:fontFamily="@font/nanums"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/addItemEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addItemView"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/nanums"
        android:hint="이름" />

    <TextView
        android:id="@+id/addDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addItemEdit"
        android:fontFamily="@font/nanums"
        android:text="날짜"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/addDateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDateView"
        android:ems="10"
        android:fontFamily="@font/nanums"
        android:inputType="date" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|right">

        <Button
            android:id="@+id/registBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="확인"
            android:fontFamily="@font/nanums"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="닫기"
            android:fontFamily="@font/nanums"
            android:textColor="@color/gray" />
    </LinearLayout>
</RelativeLayout>